@@ -1,6 +1,3 @@
-Tests
-
-
 tox
 
 
