@@ -33,6 +33,10 @@ TEMPLATES = [
 WSGI_APPLICATION = 'example.wsgi.application'
 
 DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
+    }
 }
 
 AUTH_PASSWORD_VALIDATORS = [
